🧱 Mason: Upgrade Threat Modeling Prompt
    💡 **What:** Refactored `prompts/technical/security/cybersecurity_threat_modeling.prompt.yaml`.

    🎯 **Why:**
    - Upgraded persona to "Senior Medical Device Cybersecurity Architect".
    - Added mandatory STRIDE methodology and FDA Premarket Cybersecurity Guidance (FDA-2018-D-3443) context.
    - Enforced strict XML input wrapping (`<system_architecture>`) and structured Markdown output headers.
    - Added realistic test data (CRM ecosystem) and regex-based evaluators.

    📊 **Impact:**
    - Prevents generic responses by enforcing domain-specific methodology.
    - Reduces prompt injection risk via input delimiters.
    - Ensures verifiable, structured output for downstream processing or compliance checks.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/prompts/technical/security/cybersecurity_threat_modeling.prompt.yaml
+++ b/prompts/technical/security/cybersecurity_threat_modeling.prompt.yaml
@@ -1,56 +1,104 @@
 ---
 name: Medical Device Cybersecurity Threat Modeling
-version: 0.1.0
-description: Analyze system architecture using STRIDE.
+version: 0.2.0
+description: Analyze system architecture using STRIDE methodology and FDA Premarket Cybersecurity Guidance.
 metadata:
   domain: technical
-  complexity: low
+  complexity: high
   tags:
   - security
   - medical
   - device
   - cybersecurity
   - threat
-  requires_context: false
+  - fda
+  - stride
+  requires_context: true
 variables:
 - name: system_architecture
-  description: The system architecture to use for this prompt
+  description: The detailed system architecture description (components, interfaces, data flows)
   required: true
 model: gpt-4o
 modelParameters:
-  temperature: 0.2
+  temperature: 0.1
 messages:
 - role: system
-  content: You are a Security Architect. Analyze the medical device system architecture using the STRIDE methodology to identify
-    threat vectors (spoofing, tampering, etc.) and generate a threat modeling summary for the FDA premarket submission. Reference
-    FDA Premarket Cybersecurity Guidance.
+  content: |
+    You are a Senior Medical Device Cybersecurity Architect with 20+ years of experience in FDA regulatory submissions.
+    Your task is to analyze a medical device system architecture using the STRIDE methodology (Spoofing, Tampering, Repudiation, Information Disclosure, Denial of Service, Elevation of Privilege).
+
+    You must strictly adhere to the FDA Premarket Cybersecurity Guidance (FDA-2018-D-3443).
+
+    ## Analysis Process
+    1. Decompose the architecture into components and data flows.
+    2. Apply STRIDE to each interface and component.
+    3. Identify specific threat vectors and potential impacts on patient safety.
+    4. Propose mitigations for each identified threat.
+
+    ## Output Format
+    You must output a structured Markdown report with the following EXACT headers:
+
+    ## Executive Summary
+    (A brief overview of the security posture)
+
+    ## System Decomposition
+    (List of key components and data flows analyzed)
+
+    ## STRIDE Threat Analysis
+    (A Markdown table with columns: | ID | Component | Threat Type (STRIDE) | Description | Impact | Mitigation |)
+
+    ## FDA Compliance Check
+    (Assessment against key FDA cybersecurity controls: Authentication, Encryption, Integrity, Updates)
+
+    ## Conclusion
+    (Final risk assessment statement)
+
+    ## Constraints
+    - Do NOT use generic advice; be specific to the provided architecture.
+    - Do NOT skip any letter of STRIDE.
+    - Ensure all mitigations are technically feasible for embedded medical devices.
 - role: user
-  content: 'Analyze the medical device system architecture using the STRIDE methodology to identify threat vectors (spoofing,
-    tampering, etc.) and generate a threat modeling summary for the FDA premarket submission.
+  content: |
+    Analyze the following medical device system architecture for cybersecurity threats.
 
+    <system_architecture>
+    {{system_architecture}}
+    </system_architecture>
 
-    Inputs:
-
-    - `{{system_architecture}}`
-
-
-    Output format:
-
-    Markdown Threat Modeling Summary.'
+    Output the analysis in the specified Markdown format.
 testData:
-- input: 'system_architecture: Bluetooth-connected insulin pump.
+- input: |
+    system_architecture: |
+      The system is a Cardiac Rhythm Management (CRM) ecosystem consisting of:
+      1. Implantable Pulse Generator (IPG): A pacemaker implanted in the patient's chest. communicates via proprietary RF (400MHz) and BLE.
+      2. Patient Home Monitor (PHM): A bedside device that reads data from the IPG via RF and uploads it to the cloud via Wi-Fi/LTE.
+      3. Mobile App: A patient-facing app on iOS/Android that connects to the IPG via BLE for status updates.
+      4. Cloud Backend: AWS-based server storing patient data and clinician portals.
 
-    '
-  expected: 'Threat Modeling Summary
+      Data Flows:
+      - IPG -> PHM (Telemetry, stored EGM data)
+      - PHM -> Cloud (Encrypted uploads)
+      - Mobile App -> IPG (Read-only status, Battery level)
+      - Clinician -> Cloud (Programmer adjustments - logically separate but data flows to IPG via Programmer device not listed here, assume Cloud pushes firmware updates to PHM for the IPG).
+  expected: |
+    ## Executive Summary
 
-    '
+    ## STRIDE Threat Analysis
+    | ID | Component | ...
+
+    ## FDA Compliance Check
 evaluators:
-- name: STRIDE
+- name: Executive Summary Header
+  regex:
+    pattern: "^## Executive Summary"
+    flags: ["MULTILINE"]
+- name: STRIDE Table
+  regex:
+    pattern: "\\|.*Threat Type.*\\|"
+- name: FDA Compliance
+  regex:
+    pattern: "^## FDA Compliance Check"
+    flags: ["MULTILINE"]
+- name: Specific Terminology
   string:
-    contains: STRIDE
-- name: Threat Vectors
-  string:
-    contains: Threat Vectors
-- name: Vulnerability
-  string:
-    contains: Vulnerability
+    contains: "Implantable Pulse Generator"
