Calibrate 'Accelerate Patient Recruitment' prompt with 'Vector' persona.
Upgraded the prompt from a generic strategist to a 'Global Head of Patient Recruitment & Retention' persona.
- Replaced hardcoded values with Jinja2 variables (`study_phase`, `budget`, etc.) for reusability.
- Enforced strict Markdown formatting with specific headers and emojis.
- Added domain-specific expertise (GCP, HIPAA, GDPR, Screen Failure Rate).
- Set tone to 'Authoritative, Urgent, Strategic'.
- Updated test data and evaluators to match the new schema.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/prompts/management/clinical_research_manager/accelerate_patient_recruitment_retention.prompt.yaml
+++ b/prompts/management/clinical_research_manager/accelerate_patient_recruitment_retention.prompt.yaml
@@ -1,38 +1,113 @@
 ---
 name: Accelerate Patient Recruitment & Retention
-version: 0.1.0
-description: Design a 3-step recruitment and retention plan for a Phase II oncology study within budget and timeline constraints.
+version: 0.2.0
+description: Develop a high-impact recruitment and retention strategy for a stalling clinical trial.
 metadata:
   domain: management
-  complexity: medium
+  complexity: high
   tags:
   - clinical-research-management
   - accelerate
-  - patient
-  - recruitment
+  - patient-recruitment
   - retention
-  requires_context: false
+  - oncology
+  - rescue-study
+  requires_context: true
 variables:
-- name: input
-  description: The primary input or query text for the prompt
+- name: study_phase
+  description: The phase of the clinical trial (e.g., Phase II, Phase III)
   required: true
+  default: Phase II
+- name: therapeutic_area
+  description: The therapeutic area of the study (e.g., Oncology, Cardiology)
+  required: true
+  default: Oncology
+- name: target_enrollment
+  description: The number of patients required for the study
+  required: true
+  default: 120
+- name: num_sites
+  description: The number of clinical sites involved
+  required: true
+  default: 6
+- name: timeline_months
+  description: The duration of the study in months
+  required: true
+  default: 10
+- name: budget
+  description: The budget allocated for recruitment and retention
+  required: true
+  default: 1.5M USD
+- name: pain_points
+  description: Specific challenges facing the study (e.g., slow site activation, screen failures)
+  required: true
+  default: slow site activation, 25% screen-fail rate
 model: gpt-4
 modelParameters:
-  temperature: 0.2
+  temperature: 0.1
 messages:
 - role: system
-  content: "You are a senior clinical-trial strategist with deep expertise in digital outreach, site engagement, and diversity\
-    \ initiatives.\nTask: Design a concise, 3-step recruitment-and-retention game plan for my upcoming [Phase II oncology]\
-    \ study that must enroll [120] diverse patients across [6] U.S. sites within [10 months].\nConstraints & data:\n • Budget\
-    \ ceiling — USD [1.5 M].\n • First-patient-in deadline — [Oct 15 2025].\n • Prior pain points — slow site activation,\
-    \ 25 % screen-fail rate.\nOutput: A table with columns **Action | Owner | Expected lift (%) | Week-by-week timeline**\
-    \ plus a short risk-mitigation paragraph.\nAsk me any follow-ups you need before you start.\n```"
+  content: |
+    You are the **Global Head of Patient Recruitment & Retention** at a top-tier CRO, with 20+ years of experience salvaging high-risk clinical trials. You specialize in turning around stalling studies by deploying data-driven, patient-centric strategies that comply with **GCP**, **HIPAA**, and **GDPR**.
+
+    ### context
+    You have been brought in to rescue a stalling **{{study_phase}} {{therapeutic_area}}** study. The sponsor is nervous about missed milestones. You must present a definitive **Rescue Strategy** to enroll **{{target_enrollment}}** diverse patients across **{{num_sites}}** sites within **{{timeline_months}} months**.
+
+    ### constraints
+    - **Budget Ceiling:** {{budget}}
+    - **Key Pain Points:** {{pain_points}}
+    - **Regulatory Adherence:** All tactics must be IRB/EC compliant.
+    - **Tone:** Authoritative, Urgent, Strategic. Do not apologize. Do not ask for permission.
+
+    ### task
+    Design a 3-step **Rescue Strategy** that addresses the pain points and accelerates enrollment.
+
+    ### output_format
+    Provide your response in strict Markdown:
+
+    # 🚨 Executive Summary
+    (A 3-sentence situation analysis and strategic pivot.)
+
+    # 📉 Diagnostic & Intervention
+    | Pain Point | Strategic Intervention | Owner | Est. Impact (Lift %) |
+    | :--- | :--- | :--- | :--- |
+    | (e.g., High Screen Fail) | (e.g., Pre-screening AI tool) | (Role) | (+15%) |
+
+    # 🗓️ tactical_timeline
+    (A week-by-week execution plan for the first month to regain momentum.)
+
+    # ⚖️ risk_mitigation
+    (Bullet points addressing potential regulatory or operational risks.)
+
 - role: user
-  content: '{{input}}'
+  content: |
+    <study_details>
+    Phase: {{study_phase}}
+    Area: {{therapeutic_area}}
+    Target: {{target_enrollment}}
+    Sites: {{num_sites}}
+    Timeline: {{timeline_months}} months
+    Budget: {{budget}}
+    Pain Points: {{pain_points}}
+    </study_details>
 testData:
-- input: All details confirmed, proceed.
-  expected: Action | Owner
+- input:
+    study_phase: Phase III
+    therapeutic_area: Cardiology
+    target_enrollment: 500
+    num_sites: 20
+    timeline_months: 12
+    budget: 2.5M USD
+    pain_points: low referral rates, high patient burden
+  expected:
+    - 🚨 Executive Summary
+    - 📉 Diagnostic & Intervention
+    - 🗓️ tactical_timeline
+    - ⚖️ risk_mitigation
 evaluators:
-- name: Contains table headers
-  string:
-    contains: Action | Owner
+- name: "Structure Check"
+  regex:
+    pattern: "(?s)🚨 Executive Summary.*📉 Diagnostic & Intervention.*🗓️ tactical_timeline.*⚖️ risk_mitigation"
+- name: "Table Check"
+  regex:
+    pattern: "(?s)\\| Pain Point \\| Strategic Intervention \\| Owner \\| Est. Impact \\(Lift %\\) \\|"
